--- a/README.adoc
+++ b/README.adoc
@@ -4,6 +4,33 @@
 A set of utils for dealing with `bigarrays` of `char` as if they were proper
 OCaml strings.
 
+== Usage
+
+[source,OCaml]
+----
+#require "bigstring";;
+#install_printer Bigstring.print;;
+module B = Bigstring;;
+
+# let s1 = B.of_string "  abcd ";;
+val s1 : B.t = "  abcd "
+
+# let s2 = B.trim s1;;
+val s2 : B.t = "abcd"
+
+# B.index ~c:'b' s2 ;;
+- : int = 1
+
+# let str = "__";;
+val str : string = "__"
+
+# B.blit_of_string str 0 s2 1 2;;
+- : unit = ()
+
+# s2;;
+- : B.t = "a__d"
+----
+
 == License
 
 This code is free, under the BSD license.
